--- a/curso-ae-experto-v2.html
+++ b/curso-ae-experto-v2.html
@@ -25,7 +25,7 @@
   --font-display: 'Poppins', sans-serif;
   --font-body: 'DM Sans', sans-serif;
   --max: 1440px;
-  --sidebar-w: 320px;
+  --sidebar-w: 380px;
 }
 *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
 html { scroll-behavior: smooth; }
@@ -114,13 +114,13 @@ nav {
   border-bottom: 1px solid var(--border);
   flex-shrink: 0;
 }
-.sidebar-head h2 { font-family: var(--font-display); font-size: 15px; font-weight: 700; }
-.sidebar-head p { font-size: 11px; color: var(--muted); margin-top: 2px; }
-.search-wrap { padding: 10px 12px; border-bottom: 1px solid var(--border); flex-shrink: 0; }
+.sidebar-head h2 { font-family: var(--font-display); font-size: 16px; font-weight: 700; }
+.sidebar-head p { font-size: 13px; color: var(--muted); margin-top: 2px; }
+.search-wrap { padding: 12px 14px; border-bottom: 1px solid var(--border); flex-shrink: 0; }
 .search-wrap input {
-  width: 100%; padding: 9px 13px; border-radius: 7px;
+  width: 100%; padding: 11px 14px; border-radius: 8px;
   border: 1px solid var(--border2); background: rgba(255,255,255,.04);
-  color: var(--txt); font-family: var(--font-body); font-size: 12px; outline: none;
+  color: var(--txt); font-family: var(--font-body); font-size: 13px; outline: none;
   transition: border-color .2s;
 }
 .search-wrap input:focus { border-color: rgba(0,229,200,.35); }
@@ -139,8 +139,8 @@ nav {
   position: sticky; top: 0; z-index: 5; backdrop-filter: blur(10px);
   display: flex; align-items: baseline; gap: 8px;
 }
-.group-label span { font-family: var(--font-display); font-size: 10px; font-weight: 700; letter-spacing: .8px; text-transform: uppercase; color: var(--muted); }
-.group-label em { font-style: normal; font-size: 10px; color: var(--muted2); }
+.group-label span { font-family: var(--font-display); font-size: 12px; font-weight: 700; letter-spacing: .8px; text-transform: uppercase; color: var(--muted); }
+.group-label em { font-style: normal; font-size: 12px; color: var(--muted2); }
 
 .lesson-item {
   width: 100%; text-align: left;
@@ -165,19 +165,19 @@ nav {
 .lesson-item.active .lesson-dot { background: var(--cyan); box-shadow: 0 0 8px rgba(0,229,200,.5); }
 .lesson-item.done .lesson-dot { background: var(--violet); box-shadow: 0 0 6px rgba(139,92,246,.4); }
 .lesson-text { flex: 1; min-width: 0; }
-.lesson-name { font-size: 12px; font-weight: 500; line-height: 1.35; color: var(--txt); }
+.lesson-name { font-size: 14px; font-weight: 500; line-height: 1.35; color: var(--txt); }
 .lesson-item.active .lesson-name { color: var(--cyan); font-weight: 600; }
-.lesson-desc { font-size: 11px; color: var(--muted); margin-top: 2px; line-height: 1.4; }
-.lesson-check { font-size: 10px; flex-shrink: 0; margin-top: 4px; color: var(--violet); opacity: 0; transition: opacity .2s; }
+.lesson-desc { font-size: 13px; color: var(--muted); margin-top: 2px; line-height: 1.4; }
+.lesson-check { font-size: 12px; flex-shrink: 0; margin-top: 4px; color: var(--violet); opacity: 0; transition: opacity .2s; }
 .lesson-item.done .lesson-check { opacity: 1; }
 
 /* MAIN */
-.main { padding: 24px 28px 48px; }
+.main { padding: 20px 24px 48px; }
 
 /* HOME */
 #homeCard { animation: fadeUp .4s cubic-bezier(.22,1,.36,1) both; }
 .home-header {
-  padding: 36px 40px 32px;
+  padding: 30px 32px 28px;
   background:
     radial-gradient(ellipse 70% 50% at 0% 0%, rgba(0,229,200,.13), transparent 55%),
     radial-gradient(ellipse 60% 50% at 100% 0%, rgba(139,92,246,.14), transparent 55%),
@@ -197,87 +197,88 @@ nav {
 }
 .home-title {
   font-family: var(--font-display);
-  font-size: clamp(30px, 4.5vw, 52px);
-  font-weight: 900; line-height: 1.0; letter-spacing: -1.5px;
-  margin-top: 16px;
+  font-size: clamp(28px, 3.8vw, 46px);
+  font-weight: 900; line-height: 1.05; letter-spacing: -1.5px;
+  margin-top: 14px;
 }
 .home-title span {
   background: linear-gradient(90deg, var(--cyan) 0%, var(--violet) 100%);
   -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text;
 }
 .home-sub {
-  margin-top: 14px; font-size: 15px; font-weight: 300;
-  color: var(--muted); line-height: 1.75; max-width: 60ch;
+  margin-top: 12px; font-size: 14px; font-weight: 300;
+  color: var(--muted); line-height: 1.7; max-width: 60ch;
 }
-.home-actions { margin-top: 24px; display: flex; gap: 10px; flex-wrap: wrap; align-items: center; }
+.home-actions { margin-top: 20px; display: flex; gap: 10px; flex-wrap: wrap; align-items: center; }
+
+/* HOME CONTENT SPACING */
+.section-gap { margin-top: 16px; }
 
 /* ABOUT GRID */
-.section-gap { margin-top: 20px; }
-.about-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-top: 14px; }
+.about-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
 .about-card {
-  padding: 16px 18px; border: 1px solid var(--border); border-radius: 12px;
+  padding: 14px 16px; border: 1px solid var(--border); border-radius: 12px;
   background: rgba(255,255,255,.02); transition: border-color .2s, background .2s;
 }
 .about-card:hover { border-color: var(--border2); background: rgba(255,255,255,.04); }
-.about-card-icon { font-size: 20px; margin-bottom: 6px; }
-.about-card-title { font-family: var(--font-display); font-size: 13px; font-weight: 700; margin-bottom: 4px; }
-.about-card-desc { font-size: 12px; color: var(--muted); line-height: 1.55; }
+.about-card-icon { font-size: 18px; margin-bottom: 5px; }
+.about-card-title { font-family: var(--font-display); font-size: 13px; font-weight: 700; margin-bottom: 3px; }
+.about-card-desc { font-size: 12px; color: var(--muted); line-height: 1.5; }
 
 .section-label {
   font-family: var(--font-display); font-size: 10px; font-weight: 800;
-  letter-spacing: 1px; text-transform: uppercase; color: var(--cyan); margin-bottom: 12px;
+  letter-spacing: 1px; text-transform: uppercase; color: var(--cyan); margin-bottom: 10px;
 }
-.about-text { font-size: 14px; color: var(--muted); line-height: 1.85; font-weight: 300; }
+.about-text { font-size: 13.5px; color: var(--muted); line-height: 1.8; font-weight: 300; }
 .about-text strong { color: var(--txt); font-weight: 500; }
-.divider { border: none; border-top: 1px solid var(--border); margin: 24px 0; }
+.divider { border: none; border-top: 1px solid var(--border); margin: 20px 0; }
 
-/* VIDEO EMBEDS */
+/* VIDEO EMBEDS - home videos constrained */
 .video-box {
-  border-radius: 10px; overflow: hidden;
+  border-radius: 12px; overflow: hidden;
   border: 1px solid var(--border2); background: #000;
-  box-shadow: 0 16px 48px rgba(0,0,0,.5);
+  box-shadow: 0 12px 36px rgba(0,0,0,.5);
+  max-width: 680px;
 }
-.video-box iframe { width: 100%; aspect-ratio: 16/9; display: block; border: none; }
+.video-box iframe { width: 100%; aspect-ratio: 16/9; display: block; border: none; height: auto; }
 
 /* INSTRUCTOR */
 .instructor-card {
-  display: flex; align-items: flex-start; gap: 20px;
-  padding: 24px; border: 1px solid var(--border); border-radius: 12px;
+  display: flex; align-items: flex-start; gap: 18px;
+  padding: 20px; border: 1px solid var(--border); border-radius: 12px;
   background: rgba(255,255,255,.02);
 }
 .instructor-logo {
-  width: 72px; height: 72px; border-radius: 50%; flex-shrink: 0;
+  width: 64px; height: 64px; border-radius: 50%; flex-shrink: 0;
   background: radial-gradient(circle at 40% 35%, #00e5c8, #8b5cf6);
   display: grid; place-items: center;
 }
-.instructor-logo svg { width: 44px; height: 44px; }
-.instructor-info h3 { font-family: var(--font-display); font-size: 17px; font-weight: 800; }
+.instructor-info h3 { font-family: var(--font-display); font-size: 16px; font-weight: 800; }
 .instructor-info .role {
-  font-size: 12px; color: var(--cyan); font-weight: 500; margin-top: 3px; margin-bottom: 10px;
+  font-size: 12px; color: var(--cyan); font-weight: 500; margin-top: 3px; margin-bottom: 8px;
 }
-.instructor-info p { font-size: 13px; color: var(--muted); line-height: 1.7; font-weight: 300; }
-.instructor-stats { display: flex; gap: 20px; margin-top: 14px; flex-wrap: wrap; }
-.stat { }
+.instructor-info p { font-size: 13px; color: var(--muted); line-height: 1.65; font-weight: 300; }
+.instructor-stats { display: flex; gap: 20px; margin-top: 12px; flex-wrap: wrap; }
 .stat-val { font-family: var(--font-display); font-size: 20px; font-weight: 800; color: var(--txt); }
 .stat-lbl { font-size: 11px; color: var(--muted); margin-top: 1px; }
 
-/* PLAYER LAYOUT - full width with sidebar overlay */
+/* PLAYER */
 #playerCard { display: none; }
-.player-layout {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 0;
-}
 .player-video-wrap {
   background: #000;
-  border: 1px solid var(--border); border-radius: 14px;
+  border: 1px solid var(--border2); border-radius: 12px;
   overflow: hidden;
-  box-shadow: 0 20px 60px rgba(0,0,0,.6);
+  box-shadow: 0 16px 48px rgba(0,0,0,.6);
 }
-.player-video-wrap iframe { width: 100%; aspect-ratio: 16/9; display: block; border: none; }
+.player-video-wrap iframe {
+  width: 100%;
+  height: 500px;
+  border: none;
+  display: block;
+}
 
 .player-info {
-  padding: 20px 4px 0;
+  padding: 18px 2px 0;
 }
 .player-number { font-family: var(--font-display); font-size: 10px; font-weight: 800; letter-spacing: 1px; text-transform: uppercase; color: var(--cyan); margin-bottom: 6px; }
 .player-title { font-family: var(--font-display); font-size: clamp(18px, 2.5vw, 26px); font-weight: 800; letter-spacing: -.5px; line-height: 1.2; }
@@ -464,12 +465,10 @@ nav {
 
     <!-- PLAYER -->
     <div id="playerCard" class="anim">
-      <div class="player-layout">
-        <div class="player-video-wrap">
-          <iframe id="frame"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        </div>
+      <div class="player-video-wrap">
+        <iframe id="frame"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
       </div>
 
       <div class="player-info">
